<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    >

    <LinearLayout
        android:background="@color/blanco"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <ImageView
            android:id="@+id/btn_back"
            android:scaleType="centerInside"
            android:tint="@color/blue_splash"
            android:src="@drawable/ic_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize">

        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="25"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="50dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logo_empresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="75"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:text="@string/registro_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                android:hint="@string/login_inicio"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="30"
                android:padding="24dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                android:hint="@string/login_pass"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:padding="24dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                android:hint="@string/login_pass_confirm"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:padding="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center|bottom"
                    android:background="@drawable/btn_main"
                    android:gravity="center"
                    android:inputType="textCapCharacters"
                    android:text="@string/registro_registrarme"
                    android:textColor="@color/blanco" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>