<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blanco"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="60dp"
            android:src="@drawable/ic_logo_empresa" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"

            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="?attr/actionBarSize">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="?attr/actionBarSize">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:elevation="5dp"
                            android:hint="@string/login_inicio"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:maxLength="30"
                            android:padding="24dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:elevation="5dp"
                            android:hint="@string/login_pass"
                            android:imeOptions="actionGo"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLength="20"
                            android:padding="24dp" />


                    </LinearLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center|bottom"
                    android:background="@drawable/btn_main"
                    android:gravity="center"
                    android:inputType="textCapCharacters"
                    android:text="@string/login"
                    android:textColor="@color/blanco" />


            </FrameLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom|center"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:gravity="center|bottom"
                    android:text="@string/registro"
                    android:textColor="@color/blue_splash"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvRegistrarme"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom"
                    android:text="@string/registro2"
                    android:textColor="@color/blue_splash"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </FrameLayout>
    </LinearLayout>




</LinearLayout>